fix(css): text that comes out of the container

--- a/assets/css/ekite.scss
+++ b/assets/css/ekite.scss
@@ -8,6 +8,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .page-content {
+    overflow-wrap: break-word;
     display: flex;
     flex-direction: column;
     flex: 1;
